Bug 349558 - Kate Segfaults on startup
Summary: Kate Segfaults on startup
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 349055 354947 356277 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-24 09:05 UTC by Vit Pelcak
Modified: 2016-04-05 19:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vit Pelcak 2015-06-24 09:05:42 UTC
I have Kate with several files in saved session which is opened at startup.

When I start Kate, I end up with:
Program received signal SIGSEGV, Segmentation fault.

(gdb) run
Starting program: /usr/bin/kate 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
using qt5ct plugin
[New Thread 0x7fffd800f700 (LWP 6361)]
Detaching after fork from child process 6367.
[New Thread 0x7fffd780e700 (LWP 6362)]
Detaching after fork from child process 6371.
Detaching after fork from child process 6372.
The font for use in the terminal has not been matched exactly. Perhaps it has not been found properly.
The font for use in the terminal has not been matched exactly. Perhaps it has not been found properly.
Detaching after fork from child process 6383.
The font for use in the terminal has not been matched exactly. Perhaps it has not been found properly.
The font for use in the terminal has not been matched exactly. Perhaps it has not been found properly.
Detaching after fork from child process 6405.
[New Thread 0x7fffb7fff700 (LWP 6370)]
[New Thread 0x7fffd4808700 (LWP 6369)]
[New Thread 0x7fffd5009700 (LWP 6368)]
[New Thread 0x7fffd580a700 (LWP 6366)]
[New Thread 0x7fffd600b700 (LWP 6365)]
[New Thread 0x7fffd680c700 (LWP 6364)]
[New Thread 0x7fffd700d700 (LWP 6363)]
[New Thread 0x7fffe3042700 (LWP 6360)]

Program received signal SIGSEGV, Segmentation fault.
QWidget::hide (this=0x0) at kernel/qwidget.cpp:7901
7901    kernel/qwidget.cpp: Adresář nebo soubor neexistuje.
(gdb) 
(gdb) 
(gdb) 
(gdb) 
(gdb) bt full
#0  QWidget::hide (this=0x0) at kernel/qwidget.cpp:7901
No locals.
#1  0x00007ffff7b8dcc7 in KateTabBar::removeTab (this=0xedb120, id=0) at /usr/src/debug/kate-15.04.2/kate/src/katetabbar.cpp:178
        tabButton = 0x0
        position = -1
#2  0x00007ffff7b845a2 in KateViewSpace::removeTab (this=this@entry=0xf44ff0, doc=0xe9f9e0, 
    documentDestroyed=documentDestroyed@entry=false) at /usr/src/debug/kate-15.04.2/kate/src/kateviewspace.cpp:366
        id = <optimized out>
        removeIndex = <optimized out>
#3  0x00007ffff7b853bb in KateViewSpace::registerDocument (this=this@entry=0xf44ff0, doc=doc@entry=0xeb3ef0, 
    append=append@entry=true) at /usr/src/debug/kate-15.04.2/kate/src/kateviewspace.cpp:443
        docToHide = <optimized out>
        insertIndex = <optimized out>
#4  0x00007ffff7b86771 in KateViewSpace::restoreConfig (this=0xf44ff0, viewMan=viewMan@entry=0xf0e7e0, config=config@entry=
    0x77ef70, groupname=...) at /usr/src/debug/kate-15.04.2/kate/src/kateviewspace.cpp:635
        index = <optimized out>
        doc = 0xeb3ef0
        i = 33
        group = {<KConfigBase> = {_vptr.KConfigBase = 0x7ffff4f5ef30 <vtable for KConfigGroup+16>}, d = {d = 0x19db000}}
        lruList = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {
                    atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x11629e0}, 
              d = 0x11629e0}}, <No data fields>}
        fn = {static null = {<No data fields>}, d = 0xf0e7e0}
#5  0x00007ffff7b80509 in KateViewManager::restoreSplitter (this=this@entry=0xf0e7e0, configBase=0x77ef70, group=..., 
    parent=parent@entry=0xf0e7e0, viewConfGrp=...) at /usr/src/debug/kate-15.04.2/kate/src/kateviewmanager.cpp:1110
        vs = 0xf44ff0
        it = {i = 0xf1bd90}
        config = {<KConfigBase> = {_vptr.KConfigBase = 0x7ffff4f5ef30 <vtable for KConfigGroup+16>}, d = {d = 0xf185d0}}
        children = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {
                    atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0xf1bd80}, 
              d = 0xf1bd80}}, <No data fields>}
#6  0x00007ffff7b80827 in KateViewManager::restoreViewConfiguration (this=0xf0e7e0, config=...)
    at /usr/src/debug/kate-15.04.2/kate/src/kateviewmanager.cpp:1013
        lastViewSpace = <optimized out>
#7  0x00007ffff7b73e4b in KateMainWindow::KateMainWindow (this=0x807b60, sconfig=0x77ef70, sgroup=..., 
    __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kate-15.04.2/kate/src/katemainwindow.cpp:158
        disableUpdates = {m_widget = {wp = {d = 0xee36b0, value = 0x807b60}}}
        readConfigRevision = 10
        firstStart = false
#8  0x00007ffff7b5f637 in KateApp::newMainWindow (this=<optimized out>, sconfig_=sconfig_@entry=0x77ef70, sgroup_=...)
    at /usr/src/debug/kate-15.04.2/kate/src/kateapp.cpp:350
        sconfig = 0x77ef70
        sgroup = {static null = {<No data fields>}, d = 0x66c230}
        mainWindow = <optimized out>
#9  0x00007ffff7b92a55 in KateSessionManager::loadSession (this=this@entry=0x7c49a0, session=...)
    at /usr/src/debug/kate-15.04.2/kate/src/session/katesessionmanager.cpp:200
        i = 0
        cfg = 0x77ef70
        delete_cfg = false
        sharedConfig = {d = 0x6cb610}
        sc = <optimized out>
        loadDocs = <optimized out>
        c = {<KConfigBase> = {_vptr.KConfigBase = 0x7ffff4f5ef30 <vtable for KConfigGroup+16>}, d = {d = 0x806510}}
#10 0x00007ffff7b939db in KateSessionManager::activateSession (this=this@entry=0x7c49a0, session=..., 
    closeAndSaveLast=closeAndSaveLast@entry=false, loadNew=loadNew@entry=true)
    at /usr/src/debug/kate-15.04.2/kate/src/session/katesessionmanager.cpp:161
No locals.
#11 0x00007ffff7b93f79 in KateSessionManager::activateSession (this=this@entry=0x7c49a0, name=..., 
    closeAndSaveLast=closeAndSaveLast@entry=false, loadNew=loadNew@entry=true)
    at /usr/src/debug/kate-15.04.2/kate/src/session/katesessionmanager.cpp:223
No locals.
#12 0x00007ffff7b945c8 in KateSessionManager::chooseSession (this=0x7c49a0)
    at /usr/src/debug/kate-15.04.2/kate/src/session/katesessionmanager.cpp:358
        c = {<KConfigBase> = {_vptr.KConfigBase = 0x7ffff4f5ef30 <vtable for KConfigGroup+16>}, d = {d = 0x7dfe50}}
        chooser = <optimized out>
        success = <optimized out>
        lastSession = {static null = {<No data fields>}, d = 0x81a020}
        sesStart = {static null = {<No data fields>}, d = 0x7c8da0}
        res = <optimized out>
#13 0x00007ffff7b6199b in KateApp::startupKate (this=0x7fffffffdbc0) at /usr/src/debug/kate-15.04.2/kate/src/kateapp.cpp:153
        codec = <optimized out>
        tempfileSet = <optimized out>
        line = <optimized out>
        codec_name = {static null = {<No data fields>}, d = 0x0}
        doc = <optimized out>
        urls = {<QListSpecialMethods<QUrl>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, 
                alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7fffffffdb50}, d = 0x7fffffffdb50}}
        column = <optimized out>
        nav = <optimized out>
#14 0x00007ffff7b61dcd in KateApp::init (this=this@entry=0x7fffffffdbc0) at /usr/src/debug/kate-15.04.2/kate/src/kateapp.cpp:108
No locals.
#15 0x00007ffff7ba7d1d in kdemain (argc=1, argv=<optimized out>) at /usr/src/debug/kate-15.04.2/kate/src/main.cpp:427
        gotoColumnOption = {d = {d = 0x6fc8c0}}
        readStdInOption = {d = {d = 0x6fca20}}
        aboutData = {d = 0x6d3e30}
        startAnonymousSessionOption = {d = {d = 0x6ec450}}
        app = {<QGuiApplication> = {<QCoreApplication> = {<QObject> = {
                _vptr.QObject = 0x7ffff4a50a10 <vtable for QApplication+16>, static staticMetaObject = {d = {superdata = 0x0, 
                    stringdata = 0x7ffff333df80 <qt_meta_stringdata_QObject>, data = 0x7ffff333de60 <qt_meta_data_QObject>, 
                    static_metacall = 0x7ffff3229840 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, 
                    relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x60f520}, static staticQtMetaObject = {d = {
                    superdata = 0x0, stringdata = 0x7ffff3387cc0 <qt_meta_stringdata_Qt>, 
                    data = 0x7ffff3385440 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0, 
                    extradata = 0x0}}}, static staticMetaObject = {d = {superdata = 0x7ffff3628e80 <QObject::staticMetaObject>, 
                  stringdata = 0x7ffff339bc60 <qt_meta_stringdata_QCoreApplication>, 
                  data = 0x7ffff339bb40 <qt_meta_data_QCoreApplication>, 
                  static_metacall = 0x7ffff329d9a0 <QCoreApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, static self = 0x7fffffffdb70}, static staticMetaObject = {d = {
                superdata = 0x7ffff362c5c0 <QCoreApplication::staticMetaObject>, 
                stringdata = 0x7ffff3f413a0 <qt_meta_stringdata_QGuiApplication>, 
                data = 0x7ffff3f411a0 <qt_meta_data_QGuiApplication>, 
---Type <return> to continue, or q <return> to quit---
                static_metacall = 0x7ffff3be72f0 <QGuiApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
              superdata = 0x7ffff41f7a80 <QGuiApplication::staticMetaObject>, 
              stringdata = 0x7ffff46fbcc0 <qt_meta_stringdata_QApplication>, data = 0x7ffff46fbb40 <qt_meta_data_QApplication>, 
              static_metacall = 0x7ffff4372100 <QApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, 
              relatedMetaObjects = 0x0, extradata = 0x0}}}
        tempfileOption = {d = {d = 0x6fcb80}}
        parser = {d = 0x6ff0a0}
        startSessionOption = {d = {d = 0x6fc4f0}}
        usePidOption = {d = {d = 0x6fd1a0}}
        gotoLineOption = {d = {d = 0x6fe5d0}}
        kateApp = {<QObject> = {_vptr.QObject = 0x7ffff7dd3b30 <vtable for KateApp+16>, static staticMetaObject = {d = {
                superdata = 0x0, stringdata = 0x7ffff333df80 <qt_meta_stringdata_QObject>, 
                data = 0x7ffff333de60 <qt_meta_data_QObject>, 
                static_metacall = 0x7ffff3229840 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, 
                relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x6c79a0}, static staticQtMetaObject = {d = {
                superdata = 0x0, stringdata = 0x7ffff3387cc0 <qt_meta_stringdata_Qt>, data = 0x7ffff3385440 <qt_meta_data_Qt>, 
                static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
              superdata = 0x7ffff3628e80 <QObject::staticMetaObject>, stringdata = 0x7ffff7bc46e0 <qt_meta_stringdata_KateApp>, 
              data = 0x7ffff7bc4560 <qt_meta_data_KateApp>, 
              static_metacall = 0x7ffff7baf360 <KateApp::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, 
              relatedMetaObjects = 0x0, extradata = 0x0}}, static s_self = 0x7fffffffdbc0, m_args = @0x7fffffffda10, 
          m_docManager = 0x6fce40, m_pluginManager = 0x7a8f70, m_sessionManager = 0x7c49a0, m_adaptor = 0x780190, 
          m_mainWindows = {<QListSpecialMethods<KateMainWindow*>> = {<No data fields>}, {p = {static shared_null = {ref = {
                    atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x103eb80}, d = 0x103eb80}}, 
          m_wrapper = 0x6f9a30}
        dbusService = {<QObject> = {
            _vptr.QObject = 0x7ffff7bb9200 <kdemain::{lambda()#55}::operator()() const::qstring_literal>, 
            static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7ffff333df80 <qt_meta_stringdata_QObject>, 
                data = 0x7ffff333de60 <qt_meta_data_QObject>, 
                static_metacall = 0x7ffff3229840 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, 
                relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x40000046}, static staticQtMetaObject = {d = {
                superdata = 0x0, stringdata = 0x7ffff3387cc0 <qt_meta_stringdata_Qt>, data = 0x7ffff3385440 <qt_meta_data_Qt>, 
                static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {
              superdata = 0x7ffff3628e80 <QObject::staticMetaObject>, 
              stringdata = 0x7ffff5b75680 <qt_meta_stringdata_KDBusService>, data = 0x7ffff5b75560 <qt_meta_data_KDBusService>, 
              static_metacall = 0x7ffff5b72ba0 <KDBusService::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, 
              relatedMetaObjects = 0x0, extradata = 0x0}}, d = 0x4007d0 <_start>}
        startNewInstanceOption = {d = {d = 0x6fe380}}
        startBlockingOption = {d = {d = 0x6fd2a0}}
        useEncodingOption = {d = {d = 0x6fe970}}
#16 0x00007ffff77b18c5 in __libc_start_main (main=0x4007c0 <main(int, char**)>, argc=1, argv=0x7fffffffdd28, 
    init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffffffdd18) at libc-start.c:289
        result = <optimized out>
        unwind_buf = {cancel_jmp_buf = {{jmp_buf = {0, -1858687045149819430, 4196304, 140737488346400, 0, 0, 
                1858687046270942682, 1858705770317839834}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 
              0x4008d0 <__libc_csu_init>, 0x7fffffffdd28}, data = {prev = 0x0, cleanup = 0x0, canceltype = 4196560}}}
        not_first_call = <optimized out>
#17 0x00000000004007f9 in _start () at ../sysdeps/x86_64/start.S:118
No locals.


Reproducible: Always
Comment 1 Vit Pelcak 2015-06-24 09:05:57 UTC
kate-15.04.2
Comment 2 Dominik Haumann 2015-10-09 17:36:48 UTC
Git commit b989ac5b1e6433350c95b846ca6b5ff4f416bebd by Dominik Haumann.
Committed on 09/10/2015 at 17:36.
Pushed by dhaumann into branch 'master'.

fix bug #349558: Avoid crash in tabbar on Kate session restore
CHANGELOG: fix bug #349558: Avoid crash in tabbar on Kate session restore

M  +67   -28   kate/src/katetabbar.cpp
M  +5    -5    kate/src/katetabbar.h

http://commits.kde.org/kate/b989ac5b1e6433350c95b846ca6b5ff4f416bebd
Comment 3 Christoph Cullmann 2015-10-09 17:37:29 UTC
*** Bug 349055 has been marked as a duplicate of this bug. ***
Comment 4 Dominik Haumann 2016-04-05 19:13:14 UTC
*** Bug 354947 has been marked as a duplicate of this bug. ***
Comment 5 Dominik Haumann 2016-04-05 19:24:38 UTC
*** Bug 356277 has been marked as a duplicate of this bug. ***