fix bug #349558: Avoid crash in tabbar on Kate session restore

BUG: 349558
CHANGELOG: fix bug #349558: Avoid crash in tabbar on Kate session restore